resources/deployment/kubernetes/01_msr-customer-management_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-management
  name: customer-management
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 120
  selector:
    matchLabels:
      app: customer-management
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: customer-management
    spec:
      containers:
        - image: staillansag/msr-customer-management-v2:latest
          imagePullPolicy: Always
          name: customer-management-msr
          ports:
            - name: metrics
              containerPort: 5555
          volumeMounts:
            - mountPath: "/tmp/license"
              name: licenses
              readOnly: true
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1000Mi
          livenessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 180
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 24
      volumes:
        - name: licenses
          secret:
            secretName: licenses
