resources/deployment/kubernetes/03_mcgw-customer-management_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mcgw-customer-management
  name: mcgw-customer-management
spec:
  replicas: 1
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
  minReadySeconds: 60
  selector:
    matchLabels:
      app: mcgw-customer-management
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: mcgw-customer-management
    spec:
      containers:
      - name: customer-management-mcgw
        image: azdevopssttacr.azurecr.io/microgateway:10.15.0.0.1
        ports:
        - name: metrics
          containerPort: 9090
        livenessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: acrregcred
