resources/deployment/kubernetes/02_msr-customer-management_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msr-customer-management
  labels:
    name: msr-customer-management
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5555
  selector:
    app: customer-management
