resources/deployment/kubernetes/04_mcgw-customer-management_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcgw-customer-management
  labels:
    name: mcgw-customer-management
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 9093
  selector:
    app: mcgw-customer-management
