resources/deployment/kubernetes/99_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - customers.sttlab.eu
    secretName: aks-tls
  rules:
  - host: "customers.sttlab.eu"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: mcgw-customer-management
              port:
                number: 443
